--- a/public/css/estilos.css
+++ b/public/css/estilos.css
@@ -432,6 +432,10 @@ margin-bottom: 2.5em;
   .textsub{  width: 98%; }
 
   #mod_ai {right: 0 !important}
+
+  .secdescq{ text-align: center; }
+
+  .bloqueimg{ display: none }
   
 }
 
@@ -484,6 +488,19 @@ iframe{
 
 .lisred{color: white
   !important}
+
+  .fa-4x{
+    font-size: 3.5em !important
+  }
+
+  .secdescq{
+    padding-top: 30px;
+    padding-bottom: 30px
+  }
+
+  .imgpqm{
+    width: 85%
+  }
 
 
 
