--- a/public/css/estilos.css
+++ b/public/css/estilos.css
@@ -1,28 +1,15 @@
-/*!
- * Start Bootstrap - Agency v4.1.1 (https://startbootstrap.com/template-overviews/agency)
- * Copyright 2013-2018 Start Bootstrap
- * Licensed under MIT (https://github.com/BlackrockDigital/startbootstrap-agency/blob/master/LICENSE)
- */
+a.nav-link.js-scroll-trigger {   color: #fed136; }
 
+a.nav-link.js-scroll-trigger:hover { color: #fec503; }
 
-a.nav-link.js-scroll-trigger
- {
-  color: #fed136;
-}
-
-a.nav-link.js-scroll-trigger:hover {
-  color: #fec503;
-}
-
-.text-primary {
-  color: #fed136 !important;
-}
+.text-primary { color: #fed136 !important; }
 
 h1,h2,h3,h6 {
     font-family: 'Montserrat', 'Helvetica Neue', Helvetica, Arial, sans-serif;
   letter-spacing: 1px;
 }
 
+section { padding: 80px 0;  }
 
 @keyframes bgcolor {
     0% { background-color: #fafafe }
@@ -39,29 +26,7 @@ h1,h2,h3,h6 {
 #elegir {    animation: bgcolor 2s infinite;
              animation-direction: alternate; }
 
-
-section {
-  padding: 60px 0;
-}
-
-.section-heading{
-  transform: scaleY(1.2);
-}
-
-section h3.section-subheading {
-  font-size: 16px;
-  font-weight: 400;
-  font-style: italic;
-  margin-bottom: 75px;
-  text-transform: none;
-  font-family: 'Droid Serif', 'Helvetica Neue', Helvetica, Arial, sans-serif;
-}
-
-@media (min-width: 768px) {
-  section {
-    padding: 80px 0;
-  }
-}
+.section-heading{   transform: scaleY(1.2); }
 
 .btn {
   font-family: 'Montserrat', 'Helvetica Neue', Helvetica, Arial, sans-serif;
@@ -329,6 +294,8 @@ a.navbar-brand.js-scroll-trigger{
 }
 
 .textsub{
+display: block;
+
   text-align: center;
   padding-top: 25px;
   padding-bottom: 15px;
@@ -345,8 +312,7 @@ a.navbar-brand.js-scroll-trigger{
   font-weight: bold;
 }
 
-footer{ background-color: #1a0000;
-padding: 6.5px }
+footer{ padding: 6.5px }
 
 .datos{
   line-height: 1.5;
@@ -445,17 +411,13 @@ margin-bottom: 2.5em;
   #mdctc{ width: 100% !important }
 
   #mddctc{ right: 0 !important  }
+
+  section { padding: 80px 0; }
 }
 
+#modalini{   width: 125% }
 
-
-#modalini{
-  width: 125%
-}
-
-#mod_ai {
-  right: 80px;
-}
+#mod_ai { right: 80px;}
 
 .textcarr{
   font-size: 1.2rem;
@@ -482,13 +444,9 @@ iframe{
   margin-bottom: 1em;
 }
 
-.carousel-inner{
-  margin-left: 100px
-}
+.carousel-inner{margin-left: 100px}
 
-.comt{
-  transform: scaleY(1.1);
-}
+.comt{ transform: scaleY(1.1);}
 
 #ModalInicio{
   right: 0;
@@ -496,41 +454,36 @@ iframe{
   align-content: center;
 }
 
-#imgmodi{
-  width: 100%
-}
+#imgmodi{width: 100%}
 
-.lisred{color: white
-  !important}
+.lisred{color: white !important}
 
-  .fa-4x{
-    font-size: 3.5em !important
-  }
+  .fa-4x{font-size: 3.5em !important }
 
   .secdescq{
     padding-top: 30px;
     padding-bottom: 30px
   }
 
-  .imgpqm{
-    width: 85%
-  }
+.imgpqm{width: 85%}
 
-#modalcontacto{
-  width: 100%
+#mdactc{width: 100%}
+
+#mdctini{width: 130%}
+
+#mdctc{width: 135%}
+
+#mddctc{right: 70px}
+
+#moar{  
+  background-color: #080620; 
+  padding: 20px; 
+  color: #cccbcb;
 }
 
-#mdctini{
-  width: 130%
-}
+.ulfoot{list-style-type: none; font-size: 14px}
 
-#mdctc{
-  width: 135%
-}
-
-#mddctc{
-  right: 70px
-}
+.pieminkay{background-color: black}
 
 
 
